Generalized routine names.

--- a/src/regridStates/CMakeLists.txt
+++ b/src/regridStates/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 ecbuild_add_executable( TARGET regridStates.x
                         SOURCES regridStates.F90
-                                fv3_grid.F90
+                                grids_IO.F90
                                 utils.F90)
 
 target_link_libraries(
