Bugfix for GNU compiler (#9)
Bugfix for the code in regrid_states to build with gnu (on hercules).

On develop, build fails with lines too-long on all lines containing
`__FILE__`. I've tried splitting up lines and making them shorter, and
it doesn't help.

This fixes the issue by adding a flag for GNU compilers, similar to
https://github.com/ufs-community/UFS_UTILS/blob/21c51d7a32f207526d2267f4b85133ee46fe0334/sorc/chgres_cube.fd/CMakeLists.txt#L30-L32

This fixes the build with GNU on hercules for me.

Co-authored-by: Anna V Shlyaeva <ashlyaev@hercules-login-4.hpc.msstate.edu>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,10 @@ set(CMAKE_FORTRAN_STANDARD 08)
 set(CMAKE_FORTRAN_STANDARD_REQUIRED ON)
 set(CMAKE_FORTRAN_EXTENSIONS OFF)
 
+if(CMAKE_Fortran_COMPILER_ID MATCHES "^(GNU)$")
+  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-0")
+endif()
+
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
 
 find_package(NetCDF REQUIRED COMPONENTS CXX Fortran)
