--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,6 @@ if ( oops_FOUND )
   add_subdirectory( ioda-extract )
   add_subdirectory( ioda-stats )
 endif()
-add_subdirectory( regridStates )
+if ( BUILD_REGRID_STATES )
+  add_subdirectory( regridStates )
+endif()
